fix table spacing

--- a/static/css/admin_home.css
+++ b/static/css/admin_home.css
@@ -135,6 +135,9 @@ table {
 table td {
     width: 1%;
     white-space: nowrap;
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .table-heading-btn {
     display: flex;
